# devdox-ai-portal-api

./: .dockerignore  .env.example  .gitignore  .importlinter  Dockerfile  README.md  aerich.ini  docker-compose.yaml  entrypoint.sh  fetch_secrets.py  generate_token.py  pyproject.toml  pytest.ini  requirements.txt  run_migrations.py  run_sonar.sh  run_tests.py  sonar-project.properties
app/: __init__.py  config.py  logging_config.py  main.py
devdox/: Dockerfile  aerich.ini  entrypoint.sh  generate_token.py  pyproject.toml  run_migrations.py  run_tests.py
devdox/app/: config.py  main.py
devdox/app/exceptions/: base_exceptions.py  custom_exceptions.py  exception_constants.py  exception_handlers.py  exception_manager.py  local_exceptions.py
devdox/app/models/: __init__.py  api_key.py  git_label.py  repo.py
devdox/app/repositories/: api_key.py  api_key_repository.py  git_label.py  git_label_repository.py  repo.py  repo_repository.py  user_repository.py
devdox/app/routes/: __init__.py  api_keys.py  api_keys_route.py  git_tokens.py  repos.py  webhooks.py
devdox/app/schemas/: api_key.py  api_key_schema.py  basic.py  field_constants.py  git_label.py  repo.py
devdox/app/services/: api_keys.py  api_keys_service.py  git_tokens.py  git_tokens_service.py  repository.py  repository_service.py  supabase_client.py  supabase_queue.py
devdox/app/utils/: __init__.py  api_response.py  auth.py  constants.py  encryption.py  git_managers.py  repo_fetcher.py
devdox/tests/: __init__.py  conftest.py  test_health.py  test_repos.py  test_token_api.py
devdox/tests/app/routes/webhooks/: test_user_webhook.py
devdox/tests/unit_test/: conftest.py
devdox/tests/unit_test/app/exceptions/: test_handlers.py
devdox/tests/unit_test/app/repository/: test_api_key_repository.py  test_git_label_repository.py
devdox/tests/unit_test/app/routes/: conftest.py  test_api_keys_route.py  test_git_tokens.py  test_repos.py  test_user_webhook.py
devdox/tests/unit_test/app/schema/: test_repo.py
devdox/tests/unit_test/app/services/: test_api_keys_service.py  test_git_tokens_service.py  test_repository_service.py  test_supabase_queue.py
devdox/tests/unit_test/app/utils/: test_auth.py  test_encryption.py  test_git_managers.py  test_repo_fetcher.py
devdox/tests/unit_test/test_doubles/app/repository/: api_key_repository_test_doubles.py  get_label_repository_doubles.py  repo_repository_doubles.py  user_repository_doubles.py
devdox/tests/unit_test/test_doubles/app/service/: api_keys.py  api_keys_service_test_doubles.py
devdox/tests/unit_test/test_doubles/app/utils/: auth_doubles.py  encryption_doubles.py  git_managers_doubles.py  repo_fetcher_doubles.py
migrations/: create_git_label.sql  create_repo_table.sql  create_user.sql  update_git_label_table.sql
tests/: conftest.py  test_auth.py  (+6 more)
(+65 files in other folders)
